--- a/package.json
+++ b/package.json
@@ -1,15 +1,9 @@
 {
-  "name": "step00_hello-world",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "dependencies": {
+    "esrun": "^3.2.26",
+    "inquirer": "^9.2.16"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.11.28"
+    "@types/inquirer": "^9.0.7"
   }
 }
